testsuite/tests/rename/should_compile/T22513a.hs
module T22513a where 

a = 10

f :: a -> a
f = id