testsuite/tests/rename/should_fail/rnfail024.hs
module ShouldFail where

sig_without_a_defn :: a -> b

f :: a -> b
f = sig_without_a_defn
